[package]
name = "getver"
version = "0.2.0"
edition = "2018"
authors = ["phynalle <phynalism@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A simple command line tool for capturing the latest version of crates"
repository = "https://github.com/phynalle/getver"
keywords = ["fetch", "crate", "version"]

[dependencies]
reqwest = "0.9.17"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
colored = "1.8"
version = "3.0"
runtime = "0.3.0-alpha.4"
runtime-tokio = "0.3.0-alpha.4"

[dependencies.futures]
package = "futures-preview"
version = "0.3.0-alpha.15"
