[package]
name = "getver"
version = "0.3.0"
edition = "2018"
authors = ["phynalle <phynalism@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A simple command line tool for capturing the latest version of crates"
repository = "https://github.com/phynalle/getver"
keywords = ["fetch", "crate", "version"]

[dependencies]
thiserror = "1.0.4"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
colored = "1.8.0"
version = "3.0.0"
runtime = "0.3.0-alpha.8"
futures = "0.3.0"
surf = { version = "1.0.3", features = ["curl-client"] }
