[package]
name = "getver"
version = "0.3.1"
edition = "2018"
authors = ["phynalle <phynalism@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A simple command line tool for capturing the latest version of crates"
repository = "https://github.com/phynalle/getver"
keywords = ["fetch", "crate", "version"]

[dependencies]
thiserror = "1.0.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
colored = "1.9.3"
version = "3.0.0"
tokio = { version = "0.2.13", features = ["rt-core", "macros"] }
surf = { version = "1.0.3", features = ["curl-client"] }
